js: Use JS::SourceText to store source code

JS::SourceText<char16_t> and JS::SourceText<mozilla::Utf8Unit> have
replaced the JS::SourceBufferHolder API. Use the new API instead of the
old one.

It's now possible to compile UTF-8 source text directly, without
converting it to two-byte characters first. We do this wherever
possible, but it is currently broken when trying to execute with an
environment object, as we do in eval_with_scope() and module imports.
See https://bugzilla.mozilla.org/show_bug.cgi?id=1404784